--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 body {
   background: #ebf0fa;
   @apply text-gray-500 m-8;
@@ -20,7 +20,6 @@ p > a {
   @apply text-primary underline;
 }
 
-/* nav styles */
 nav {
   @apply pb-4
       border-b-2 border-gray-200
@@ -39,7 +38,6 @@ main nav {
   @apply border-0;
 }
 
-/* button styles */
 button {
   @apply px-3 py-2 
       rounded-sm 
@@ -56,7 +54,6 @@ button:hover {
   @apply bg-gray-200 text-gray-900;
 }
 
-/* form styles */
 form {
   @apply py-4 px-7 
       bg-primary 
@@ -80,7 +77,6 @@ form button {
   @apply block mx-auto;
 }
 
-/* feedback styles */
 .error {
   @apply border-2 
       border-red-500 
@@ -93,7 +89,6 @@ form button {
       my-4 mx-auto;
 }
 
-/* card styles */
 .card {
   @apply bg-white 
       shadow-sm 
@@ -110,7 +105,6 @@ form button {
   @apply my-4 text-sm leading-6;
 }
 
-/* pill styles */
 .pill {
   @apply py-1 px-2 mt-3
       inline-block 
@@ -128,4 +122,4 @@ form button {
 .card .pill {
   @apply absolute bottom-0 right-0 
       rounded-tl-md;
-}
+} */
