--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -1,15 +1,12 @@
 .nav {
   display: flex;
   width: 100%;
-  background-color: blue;
   justify-content: space-between;
-  font-size: 1.2rem;
-}
-
-.nav_box {
-  color: red;
-}
-
-.link {
-  color: blue;
+  &__box {
+    background-color: pink;
+  }
+  &__link {
+    color: black;
+    text-decoration: none;
+  }
 }
