--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -2,11 +2,24 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
+  background-color: black;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 300;
+
   &__box {
-    background-color: pink;
+    background-color: black;
+    color: white;
+    padding: 2rem 1rem;
   }
   &__link {
-    color: black;
     text-decoration: none;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+
+    &:last-child {
+      margin-left: 1rem;
+    }
   }
 }
