--- a/app/styles/Home.module.scss
+++ b/app/styles/Home.module.scss
@@ -12,5 +12,10 @@
     &:nth-child(2) {
       background-color: white;
     }
+    &:last-child {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
