--- a/app/styles/components/PresentationContainer.module.scss
+++ b/app/styles/components/PresentationContainer.module.scss
@@ -3,19 +3,26 @@
   flex-direction: column;
   height: 70rem;
   width: 120rem;
-  background-color: red;
   border-radius: 1rem;
   box-sizing: border-box;
-
+  position: relative;
   &__container {
+    border-radius: 2rem;
     &:first-child {
-      background-color: blue;
+      position: absolute;
+      top: 1rem;
     }
     &:nth-child(2) {
       background-color: orange;
+      height: 100%;
     }
     &:last-child {
-      background-color: yellow;
+      position: absolute;
+      bottom: 3rem;
+      width: 50rem;
+      padding: 0 2rem;
+      font-size: 2rem;
+      color: white;
     }
   }
   &__bar {
