--- a/app/styles/components/AboutContainer.module.scss
+++ b/app/styles/components/AboutContainer.module.scss
@@ -20,5 +20,13 @@
         line-height: 1.2;
       }
     }
+    &:nth-child(2) {
+      display: flex;
+    }
+  }
+  &__box {
+    :nth-child(3) {
+      margin-right: 20rem;
+    }
   }
 }
