--- a/app/styles/components/Content.module.scss
+++ b/app/styles/components/Content.module.scss
@@ -1,5 +1,17 @@
 .content {
-  width: 120rem;
-  background-color: red;
-  height: 50rem;
+  display: flex;
+  align-items: center;
+  height: 30rem;
+  width: 100%;
+  &__text {
+    width: 30rem;
+    margin-right: 30rem;
+    background-color: red;
+    font-size: 10rem;
+  }
+  &__img {
+    background: blue;
+    width: 100%;
+    margin: 0 20rem;
+  }
 }
