--- a/app/styles/components/Content.module.scss
+++ b/app/styles/components/Content.module.scss
@@ -6,8 +6,13 @@
   &__text {
     width: 30rem;
     margin-right: 30rem;
-    background-color: red;
-    font-size: 10rem;
+  }
+  &__title {
+    font-size: 6rem;
+    margin-bottom: 5rem;
+  }
+  &__desc {
+    font-size: 1.4rem;
   }
   &__img {
     background: blue;
