--- a/app/styles/components/PresentationBar.module.scss
+++ b/app/styles/components/PresentationBar.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin-left: 5rem;
   &__link {
+    cursor: pointer;
     &:not(last-child) {
       margin-right: 1rem;
     }
