--- a/app/styles/components/PresentationContainer.module.scss
+++ b/app/styles/components/PresentationContainer.module.scss
@@ -10,11 +10,13 @@
     border-radius: 2rem;
     &:first-child {
       position: absolute;
+      z-index: 100;
       top: 1rem;
     }
     &:nth-child(2) {
       background-color: orange;
       height: 100%;
+      box-sizing: border-box;
     }
     &:last-child {
       position: absolute;
@@ -23,6 +25,7 @@
       padding: 0 2rem;
       font-size: 2rem;
       color: white;
+      z-index: 100;
     }
   }
   &__bar {
