--- a/app/styles/components/PresentationContainer.module.scss
+++ b/app/styles/components/PresentationContainer.module.scss
@@ -23,9 +23,11 @@
       bottom: 3rem;
       width: 50rem;
       padding: 0 2rem;
+      margin-left: 1rem;
       font-size: 2rem;
       color: white;
       z-index: 100;
+      background-color: black;
     }
   }
   &__bar {
