--- a/app/styles/components/AboutContainer.module.scss
+++ b/app/styles/components/AboutContainer.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 10rem 0;
   &__container {
     &:first-child {
