--- a/app/styles/Home.module.scss
+++ b/app/styles/Home.module.scss
@@ -9,6 +9,11 @@
     height: 100vh;
     padding: 0 4rem;
     color: red;
+    &:first-child {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     &:nth-child(2) {
       background-color: white;
     }
@@ -18,11 +23,4 @@
       align-items: center;
     }
   }
-}
-
-.test {
-  z-index: -1;
-  width: 100%;
-  height: 100vh;
-  opacity: 0.4;
 }
