--- a/app/styles/components/SkipBar.module.scss
+++ b/app/styles/components/SkipBar.module.scss
@@ -13,6 +13,8 @@
   }
   &__link {
     color: white;
-    text-decoration: underline;
+    border-bottom: 0.1rem white solid;
+    text-decoration: none;
+    padding-bottom: 0.5rem;
   }
 }
