--- a/app/styles/components/MainPhrase.module.scss
+++ b/app/styles/components/MainPhrase.module.scss
@@ -1,8 +1,3 @@
-.img {
-  z-index: -1;
-  opacity: 0.1;
-}
-
 .title {
   color: white;
   span {
@@ -19,9 +14,22 @@
 }
 
 .circle {
-  width: 2rem;
-  height: 2rem;
-  background-color: yellow;
-  border-radius: 1rem;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 6rem;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  &:first-child {
+    border: 0.2rem white solid;
+  }
+  &:nth-child(2) {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 8rem;
+    border: 0.4rem #999999 solid;
+    z-index: -1;
+  }
 }
