feature/modify-circle-animatino

--- a/app/styles/components/MainPhrase.module.scss
+++ b/app/styles/components/MainPhrase.module.scss
@@ -21,11 +21,11 @@
   top: 50%;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%);
   opacity: 0;
   &:first-child {
     border: 0.2rem white solid;
     animation: popin 0.7s forwards ease-in-out;
+    transform: translate(-50%, -50%);
   }
   &:nth-child(2) {
     width: 8rem;
@@ -35,6 +35,27 @@
     z-index: -1;
     animation: popin 0.7s forwards ease-in-out;
     animation-delay: 0.4s;
+    transform: translate(-50%, -50%);
+  }
+  &:nth-child(3) {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 5rem;
+    border: 0.2rem #999999 solid;
+    animation: slideUp 0.2s forwards ease-in-out;
+    transform: translate(-50%, -50%);
+    animation-delay: 1s;
+    top: 90%;
+  }
+  &:nth-child(4) {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 5rem;
+    border: 0.2rem #999999 solid;
+    animation: slideDown 0.2s forwards ease-in-out;
+    transform: translate(-50%, -50%);
+    top: 10%;
+    animation-delay: 1s;
   }
 }
 
@@ -47,5 +68,25 @@
     opacity: 1;
     transform: scale(1);
     transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes slideUp {
+  60% {
+    transform: translate(-50%, -80%);
+  }
+  100% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+}
+
+@keyframes slideDown {
+  60% {
+    transform: translate(-50%, -30%);
+  }
+  100% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
   }
 }
