--- a/app/styles/components/CircleContainer.module.scss
+++ b/app/styles/components/CircleContainer.module.scss
@@ -1,5 +1,7 @@
+@import "../variables";
+
 .title {
-  color: white;
+  color: $default-white;
   span {
     font-size: 2.1rem;
     font-weight: 500;
@@ -23,7 +25,7 @@
   margin-right: -50%;
   opacity: 0;
   &:first-child {
-    border: 0.2rem white solid;
+    border: 0.2rem $default-white solid;
     animation: popin 0.7s forwards ease-in-out;
     transform: translate(-50%, -50%);
   }
@@ -31,7 +33,7 @@
     width: 8rem;
     height: 8rem;
     border-radius: 8rem;
-    border: 0.4rem #999999 solid;
+    border: 0.4rem $default-grey solid;
     z-index: -1;
     animation: popin 0.7s forwards ease-in-out;
     animation-delay: 0.4s;
@@ -41,7 +43,7 @@
     width: 5rem;
     height: 5rem;
     border-radius: 5rem;
-    border: 0.2rem #999999 solid;
+    border: 0.2rem $default-grey solid;
     animation: slideUp 0.9s forwards ease-in-out;
     transform: translate(-50%, -50%);
     animation-delay: 1s;
@@ -51,7 +53,7 @@
     width: 5rem;
     height: 5rem;
     border-radius: 5rem;
-    border: 0.2rem #999999 solid;
+    border: 0.2rem $default-grey solid;
     animation: slideDown 0.9s forwards ease-in-out;
     transform: translate(-50%, -50%);
     top: 10%;
