--- a/app/styles/components/TooltipBubble.module.scss
+++ b/app/styles/components/TooltipBubble.module.scss
@@ -1,14 +1,16 @@
+@import "../variables";
+
 .tooltip {
   position: absolute;
   z-index: 10000;
   top: 42%;
   left: 50%;
-  background-color: #0f0f0f;
+  background-color: $default-black;
   width: 6rem;
   height: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 1.7rem;
-  border: 0.04rem #5c5c5c solid;
+  border: 0.04rem $ligth-grey solid;
 }
