feature/create-bubble-chat-tooltip

--- a/app/styles/components/CircleContainer.module.scss
+++ b/app/styles/components/CircleContainer.module.scss
@@ -10,8 +10,18 @@
     }
   }
 }
-.phrase {
+.chat {
   &__container {
+    position: relative;
+  }
+  &__bubble {
+    &:nth-child(2) {
+      position: absolute;
+    }
+    &:nth-child(3) {
+      position: absolute;
+      top: 30rem;
+    }
   }
 }
 
