--- a/app/styles/components/TooltipBubble.module.scss
+++ b/app/styles/components/TooltipBubble.module.scss
@@ -6,6 +6,10 @@
   top: 42%;
   left: 50%;
   background-color: $default-black;
+  color: $default-white;
+}
+
+.bubble {
   width: 6rem;
   height: 4rem;
   display: flex;
@@ -13,4 +17,14 @@
   justify-content: center;
   border-radius: 1.7rem;
   border: 0.04rem $ligth-grey solid;
+  &:first-child {
+    width: 6rem;
+  }
+  &:nth-child(2) {
+    width: 20rem;
+    top: 38%;
+  }
+  &:nth-child(3) {
+    width: 25rem;
+  }
 }
