--- a/app/styles/components/MousePointerIcon.module.scss
+++ b/app/styles/components/MousePointerIcon.module.scss
@@ -4,4 +4,15 @@
   left: 50%;
   margin-right: -50%;
   z-index: 100;
+  animation: mouseUp 2s forwards ease-in-out;
+  animation-delay: 4s;
+}
+
+@keyframes mouseUp {
+  60% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-920%);
+  }
 }
