--- a/app/styles/components/CircleContainer.module.scss
+++ b/app/styles/components/CircleContainer.module.scss
@@ -95,9 +95,11 @@
 @keyframes slideDown {
   60% {
     transform: translate(-50%, -10%);
+    color: none;
   }
   100% {
     transform: translate(-50%, -50%);
+    color: $default-blue;
     opacity: 1;
   }
 }
