--- a/app/styles/Contact.module.scss
+++ b/app/styles/Contact.module.scss
@@ -1,16 +1,19 @@
 .contact {
-  background-color: white;
-  color: black;
-  height: 100vh;
+  color: white;
+  // height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  padding: 0 30rem;
+  margin-right: 30rem;
+  width: 80rem;
+  padding: 10rem 20rem;
   &__container {
     &:first-child {
-      font-size: 7rem;
+      font-size: 9rem;
       font-weight: 500;
+      margin-bottom: 5rem;
     }
   }
 }
