--- a/app/styles/components/MousePointerIcon.module.scss
+++ b/app/styles/components/MousePointerIcon.module.scss
@@ -23,6 +23,21 @@
     animation: appear 2.4s forwards ease-in-out;
     animation-delay: 3.8s;
   }
+  &__cursor {
+    position: absolute;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 5rem;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 30%;
+    background-color: $default-blue;
+    z-index: 10;
+    border: 0.2rem $default-grey solid;
+    opacity: 0;
+    animation: cursorAppear 2.4s forwards ease-in-out;
+    animation-delay: 4.8s;
+  }
 }
 
 @keyframes mouseUp {
@@ -43,7 +58,19 @@
     opacity: 0;
   }
   30% {
-    opacity: 1;
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes cursorAppear {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0.7;
   }
   100% {
     opacity: 0;
