--- a/app/styles/components/CircleContainer.module.scss
+++ b/app/styles/components/CircleContainer.module.scss
@@ -104,3 +104,30 @@
     opacity: 1;
   }
 }
+
+.hidden {
+  display: none;
+}
+
+.phrase {
+  &__text {
+    width: 0.24rem;
+    height: 5rem;
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    margin-right: -50%;
+    background-color: $default-white;
+    z-index: 100;
+    animation: blinkCursor 0.6s infinite ease-in-out;
+  }
+}
+
+@keyframes blinkCursor {
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
