--- a/app/styles/components/CircleContainer.module.scss
+++ b/app/styles/components/CircleContainer.module.scss
@@ -120,6 +120,7 @@
     background-color: $default-white;
     z-index: 100;
     animation: blinkCursor 0.6s infinite ease-in-out;
+    animation-delay: 0.8s;
   }
   &__text {
     font-size: 2.8rem;
@@ -130,10 +131,22 @@
     left: 30%;
     margin-right: -50%;
     padding: 1rem 2rem;
+    opacity: 0;
+    animation: appearText 1s forwards ease-in-out;
+    animation-delay: 2s;
   }
 }
 
 @keyframes blinkCursor {
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes appearText {
   50% {
     opacity: 0;
   }
