--- a/app/styles/components/CircleContainer.module.scss
+++ b/app/styles/components/CircleContainer.module.scss
@@ -119,7 +119,7 @@
     margin-right: -50%;
     background-color: $default-white;
     z-index: 100;
-    animation: blinkCursor 0.6s infinite ease-in-out;
+    animation: blinkCursor 2s forwards ease-in-out;
     animation-delay: 0.8s;
   }
   &__text {
@@ -132,17 +132,38 @@
     margin-right: -50%;
     padding: 1rem 2rem;
     opacity: 0;
-    animation: appearText 1s forwards ease-in-out;
+    animation: appearText 0.6s forwards ease-in-out;
     animation-delay: 2s;
   }
 }
 
 @keyframes blinkCursor {
+  10% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
   50% {
     opacity: 0;
   }
-  100% {
+  60% {
     opacity: 1;
+  }
+  70% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
