--- a/app/styles/components/SkipBar.module.scss
+++ b/app/styles/components/SkipBar.module.scss
@@ -1,21 +1,23 @@
+@import "../variables";
+
 .skipBar {
-  width: 100%;
   display: flex;
   justify-content: space-between;
-  font-size: 1.6rem;
   font-weight: 300;
-  box-sizing: border-box;
   position: absolute;
-  right: 0;
-  padding: 2rem 3rem;
   bottom: 0;
-  overflow: hidden;
-  &__box {
-  }
-  &__link {
-    color: white;
-    border-bottom: 0.1rem white solid;
-    text-decoration: none;
-    padding-bottom: 0.5rem;
+  left: 0;
+  padding-left: 1.4rem;
+
+  &__button {
+    cursor: pointer;
+    border: none;
+    background-color: $default-black;
+    outline: none;
+    font-size: 1.5rem;
+    color: $default-white;
+    font-weight: 300;
+    padding-bottom: 0.6rem;
+    border-bottom: 0.1rem solid $default-white;
   }
 }
