--- a/app/styles/Contact.module.scss
+++ b/app/styles/Contact.module.scss
@@ -1,19 +1,25 @@
+@import "./variables";
+
 .contact {
   color: white;
-  // height: 100vh;
+  background-color: $default-white;
+  color: $default-black;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0 30rem;
-  margin-right: 30rem;
-  width: 80rem;
-  padding: 10rem 20rem;
+  width: 100%;
+  height: 95vh;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding-left: 15rem;
+
   &__container {
     &:first-child {
-      font-size: 9rem;
-      font-weight: 500;
-      margin-bottom: 5rem;
+      margin-top: 25rem;
+      font-size: 7rem;
+      line-height: 7.2rem;
+      font-weight: 200;
+      width: 120rem;
+      letter-spacing: -0.4rem;
     }
   }
 }
