--- a/app/styles/Contact.module.scss
+++ b/app/styles/Contact.module.scss
@@ -10,16 +10,26 @@
   height: 95vh;
   box-sizing: border-box;
   overflow: hidden;
-  padding-left: 15rem;
-
+  padding-left: 20rem;
   &__container {
     &:first-child {
-      margin-top: 25rem;
+      margin-top: 20rem;
       font-size: 7rem;
       line-height: 7.2rem;
       font-weight: 200;
       width: 120rem;
       letter-spacing: -0.4rem;
+    }
+    &:last-child {
+      margin-top: 5rem;
+      margin-left: 13rem;
+      display: flex;
+    }
+  }
+  &__box {
+    font-size: 3rem;
+    &:first-child {
+      margin-right: 5rem;
     }
   }
 }
