--- a/app/styles/components/SkipBar.module.scss
+++ b/app/styles/components/SkipBar.module.scss
@@ -19,5 +19,6 @@
     font-weight: 300;
     padding-bottom: 0.6rem;
     border-bottom: 0.1rem solid $default-white;
+    font-family: inherit;
   }
 }
