chore/change-select-styling

--- a/app/styles/Contact.module.scss
+++ b/app/styles/Contact.module.scss
@@ -10,7 +10,8 @@
   height: 95vh;
   box-sizing: border-box;
   overflow: hidden;
-  padding-left: 24rem;
+  align-items: center;
+
   &__container {
     &:first-child {
       margin-top: 20rem;
