--- a/app/styles/components/CreateForm.module.scss
+++ b/app/styles/components/CreateForm.module.scss
@@ -38,12 +38,13 @@
       background-color: $default-black;
       margin-right: 1rem;
       font-family: inherit;
+      font-style: italic;
     }
     input,
     select,
     textarea {
       &::placeholder {
-        font-size: 1.4rem;
+        font-size: 1.7rem;
         color: $default-white;
         font-weight: 200;
         font-style: italic;
@@ -53,7 +54,7 @@
     option {
       width: 34rem;
       height: 6rem;
-      font-size: 1.4rem;
+      font-size: 1.7rem;
       color: $default-white;
       font-weight: 200;
     }
