--- a/app/styles/components/ContentBar.module.scss
+++ b/app/styles/components/ContentBar.module.scss
@@ -9,6 +9,7 @@
     opacity: 0.3;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
+    margin-left: 20rem;
     &:hover {
       opacity: 1;
     }
