feature/create-event-handler-for-content-bar-in-about-container

--- a/app/styles/components/AboutContainer.module.scss
+++ b/app/styles/components/AboutContainer.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   padding: 10rem 0;
   &__container {
+    padding: 0 10rem;
     &:first-child {
       padding: 0 20rem;
       margin-bottom: 10rem;
