--- a/app/styles/components/Content.module.scss
+++ b/app/styles/components/Content.module.scss
@@ -3,16 +3,20 @@
   align-items: center;
   height: 30rem;
   width: 100%;
+
   &__text {
-    width: 40rem;
-    margin-right: 15rem;
+    width: 50rem;
+    margin-right: 10rem;
   }
   &__title {
     font-size: 6rem;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
   }
   &__desc {
-    font-size: 1.4rem;
+    width: 100%;
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+    font-weight: 300;
   }
   &__img {
     width: 100%;
