--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -17,8 +17,8 @@
     color: white;
     cursor: pointer;
 
-    &:last-child {
-      margin-left: 1rem;
+    &:not(:last-child) {
+      margin-right: 1rem;
     }
   }
 }
