--- a/app/styles/components/AboutContainer.module.scss
+++ b/app/styles/components/AboutContainer.module.scss
@@ -4,11 +4,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 10rem 0;
+  padding: 10rem 25rem;
   &__container {
-    padding: 0 10rem;
     &:first-child {
-      padding: 0 20rem;
       margin-bottom: 10rem;
       h1 {
         font-weight: 300;
@@ -23,11 +21,6 @@
     }
     &:nth-child(2) {
       display: flex;
-    }
-  }
-  &__box {
-    :nth-child(3) {
-      margin-right: 20rem;
     }
   }
 }
