--- a/app/styles/components/Content.module.scss
+++ b/app/styles/components/Content.module.scss
@@ -2,24 +2,24 @@
   display: flex;
   align-items: center;
   height: 30rem;
-  width: 100%;
 
   &__text {
-    width: 50rem;
     margin-right: 10rem;
   }
   &__title {
-    font-size: 6rem;
+    font-size: 4rem;
     margin-bottom: 3rem;
+    font-weight: 4300;
   }
   &__desc {
-    width: 100%;
+    width: 30rem;
     font-size: 1.8rem;
     line-height: 2.2rem;
     font-weight: 300;
   }
   &__img {
     width: 100%;
-    margin: 0 20rem;
+    padding: 0 5rem;
+    margin-left: 5rem;
   }
 }
