--- a/app/styles/components/PresentationBar.module.scss
+++ b/app/styles/components/PresentationBar.module.scss
@@ -1,10 +1,32 @@
 .bar {
   display: flex;
-  margin-left: 5rem;
   &__link {
     cursor: pointer;
     &:not(last-child) {
       margin-right: 1rem;
     }
   }
+}
+
+.link {
+  max-width: 20rem;
+  display: flex;
+  background-color: white;
+  height: 2.6rem;
+  border-radius: 12px;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+.circle {
+  width: 0.8rem;
+  height: 0.8rem;
+  background-color: black;
+  border-radius: 10px;
+  margin-right: 0.8rem;
+}
+
+.name {
+  font-size: 1.2rem;
+  color: black;
 }
