--- a/app/styles/components/PresentationContainer.module.scss
+++ b/app/styles/components/PresentationContainer.module.scss
@@ -13,6 +13,8 @@
       z-index: 100;
       top: 1rem;
       border-radius: 2rem;
+      display: flex;
+      margin-left: 5rem;
     }
     &:nth-child(2) {
       height: 100%;
@@ -30,7 +32,5 @@
       z-index: 100;
       line-height: 3rem;
     }
-  }
-  &__bar {
   }
 }
