--- a/app/styles/components/PresentationContainer.module.scss
+++ b/app/styles/components/PresentationContainer.module.scss
@@ -24,13 +24,13 @@
     &:last-child {
       position: absolute;
       bottom: 3rem;
-      width: 70rem;
-      margin-left: 4rem;
+      margin-right: 4rem;
       font-size: 2.2rem;
       font-weight: 400;
       color: black;
       z-index: 100;
       line-height: 3rem;
+      right: 0;
     }
   }
 }
