--- a/app/styles/components/Blog.module.scss
+++ b/app/styles/components/Blog.module.scss
@@ -4,7 +4,7 @@
   grid-template-columns: 1.2fr 0.7fr;
   align-items: center;
   border-top: 1px solid $default-grey;
-  padding: 4rem 15rem;
+  padding: 8rem 15rem;
   &__container {
     &:first-child {
       margin-right: 1rem;
@@ -13,19 +13,23 @@
   &__box {
     &:first-child {
       display: flex;
-      margin-bottom: 3rem;
+      margin-bottom: 2rem;
       align-items: center;
     }
   }
   &__classification {
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: 300;
     margin-right: 2rem;
+    background-color: $default-grey;
+    color: white;
+    padding: 0.6rem 1rem;
+    border-radius: 1.4rem;
   }
 
   &__date {
     font-size: 1.4rem;
-    font-weight: 300;
+    font-weight: 400;
   }
   &__title {
     font-size: 4.7rem;
@@ -33,5 +37,17 @@
     line-height: 4.7rem;
     margin-right: 1rem;
     letter-spacing: -0.2rem;
+  }
+  &__summary {
+    font-size: 1.7rem;
+    font-weight: 300;
+    line-height: 2.2rem;
+  }
+  &__dot {
+    width: 1rem;
+    height: 1rem;
+    margin: 0 1rem;
+    background-color: $default-black;
+    border-radius: 1rem;
   }
 }
