--- a/app/styles/components/Blog.module.scss
+++ b/app/styles/components/Blog.module.scss
@@ -6,6 +6,7 @@
   border-top: 1px solid $default-grey;
   padding: 8rem 15rem;
   &__container {
+    padding: 1rem 0;
     &:first-child {
       margin-right: 1rem;
     }
@@ -13,7 +14,7 @@
   &__box {
     &:first-child {
       display: flex;
-      margin-bottom: 2rem;
+
       align-items: center;
     }
   }
@@ -25,11 +26,13 @@
     color: white;
     padding: 0.6rem 1rem;
     border-radius: 1.4rem;
+    margin-bottom: 2rem;
   }
 
   &__date {
     font-size: 1.4rem;
     font-weight: 400;
+    margin-bottom: 2rem;
   }
   &__title {
     font-size: 4.7rem;
@@ -37,11 +40,14 @@
     line-height: 4.7rem;
     margin-right: 1rem;
     letter-spacing: -0.2rem;
+    padding: 1rem 0;
   }
   &__summary {
     font-size: 1.7rem;
     font-weight: 300;
     line-height: 2.2rem;
+    margin-bottom: 1rem;
+    padding-top: 1rem;
   }
   &__dot {
     width: 1rem;
@@ -49,5 +55,6 @@
     margin: 0 1rem;
     background-color: $default-black;
     border-radius: 1rem;
+    margin-bottom: 2rem;
   }
 }
