--- a/app/styles/components/Header.module.scss
+++ b/app/styles/components/Header.module.scss
@@ -8,3 +8,28 @@
   padding-left: 15rem;
   padding-bottom: 10rem;
 }
+
+.write {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 10rem;
+  cursor: pointer;
+  padding-bottom: 2rem;
+  color: $default-black;
+  transition: all 0.6s ease-in-out;
+  &:hover {
+    color: $default-grey;
+  }
+  &__container {
+    &:first-child {
+      width: 2rem;
+      height: 2rem;
+      margin-right: 0.4rem;
+    }
+    &:last-child {
+      font-size: 1.4rem;
+      font-weight: 300;
+    }
+  }
+}
