--- a/app/styles/components/BlogDetail.module.scss
+++ b/app/styles/components/BlogDetail.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10rem 40rem;
+  padding: 10rem 45rem;
 
   &__container {
     &:first-child {
@@ -40,8 +40,9 @@
     font-weight: 400;
   }
   &__title {
-    font-size: 7rem;
-    font-weight: 300;
+    font-size: 6rem;
+    font-weight: 400;
+    line-height: 7rem;
   }
   &__content {
     font-size: 2rem;
