--- a/app/styles/components/KeepReading.module.scss
+++ b/app/styles/components/KeepReading.module.scss
@@ -5,7 +5,7 @@
   padding-top: 4rem;
   cursor: pointer;
   &__container {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 300;
     &:first-child {
       margin-right: 0.4rem;
@@ -13,4 +13,9 @@
       padding-bottom: 0.3rem;
     }
   }
+}
+
+.link {
+  text-decoration: none;
+  color: $default-black;
 }
