--- a/app/styles/components/Header.module.scss
+++ b/app/styles/components/Header.module.scss
@@ -18,10 +18,11 @@
   padding-bottom: 2rem;
   color: $default-black;
   transition: all 0.6s ease-in-out;
-  &:hover {
-    color: $default-grey;
-  }
+
   &__container {
+    &:hover {
+      color: $default-grey;
+    }
     &:first-child {
       width: 2rem;
       height: 2rem;
@@ -30,6 +31,13 @@
     &:last-child {
       font-size: 1.4rem;
       font-weight: 300;
+    }
+  }
+  &__link {
+    text-decoration: none;
+    color: $default-black;
+    &:hover {
+      color: $default-grey;
     }
   }
 }
