--- a/app/styles/components/PlogImage.module.scss
+++ b/app/styles/components/PlogImage.module.scss
@@ -2,22 +2,47 @@
 
 .plog {
   position: relative;
-  position: absolute;
-  z-index: 1;
-  opacity: 0.8;
   &__container {
-    background-color: $default-black;
   }
-  &__title {
+
+  &__icons {
+    display: flex;
+
+    div {
+      width: 3.5rem;
+      height: 3.5rem;
+      border-radius: 0.44rem;
+      background-color: $default-grey;
+      font-size: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $default-black;
+    }
+  }
+
+  &__like {
     position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 7rem;
+    margin-top: 2.5rem;
   }
-  &__date {
-    position: absolute;
-    bottom: 0;
-  }
+
   &__more {
     position: absolute;
-    bottom: 0;
+    margin-top: 2.5rem;
+    top: 0;
     right: 0;
+    margin-right: 3rem;
+    font-size: 2.4;
+  }
+
+  &__title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-left: 4rem;
+    margin-bottom: 3rem;
   }
 }
