--- a/app/styles/components/PlogImage.module.scss
+++ b/app/styles/components/PlogImage.module.scss
@@ -3,11 +3,17 @@
 .plog {
   position: relative;
   &__container {
+    &:hover {
+      background-color: $default-black;
+      opacity: 0.4;
+      transition: all 0s ease-in-out;
+      cursor: zoom-in;
+    }
   }
 
   &__icons {
     display: flex;
-
+    cursor: pointer;
     div {
       width: 3.5rem;
       height: 3.5rem;
@@ -25,7 +31,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin-right: 7rem;
+    margin-right: 7.2rem;
     margin-top: 2.5rem;
   }
 
@@ -44,5 +50,7 @@
     left: 0;
     margin-left: 4rem;
     margin-bottom: 3rem;
+    font-size: 2.4rem;
+    font-weight: 300;
   }
 }
