--- a/app/styles/components/PlogImage.module.scss
+++ b/app/styles/components/PlogImage.module.scss
@@ -6,7 +6,7 @@
     &:hover {
       background-color: $default-black;
       opacity: 0.4;
-      transition: all 0s ease-in-out;
+      transition: all 0.1s ease-in-out;
       cursor: zoom-in;
     }
   }
@@ -52,5 +52,10 @@
     margin-bottom: 3rem;
     font-size: 2.4rem;
     font-weight: 300;
+    &:hover {
+      color: $default-blue;
+      transition: all 0.1s ease-in-out;
+      cursor: pointer;
+    }
   }
 }
