--- a/app/styles/components/PlogImage.module.scss
+++ b/app/styles/components/PlogImage.module.scss
@@ -41,7 +41,8 @@
     top: 0;
     right: 0;
     margin-right: 3rem;
-    font-size: 2.4;
+    font-size: 3rem;
+    font-weight: 300;
   }
 
   &__title {
