--- a/app/styles/components/Content.module.scss
+++ b/app/styles/components/Content.module.scss
@@ -1,18 +1,19 @@
 .content {
   display: flex;
   align-items: center;
-  height: 30rem;
+  height: 25rem;
 
   &__title {
-    font-size: 4rem;
+    font-size: 3rem;
     margin-bottom: 3rem;
-    font-weight: 4300;
+    font-weight: 200;
+    font-style: oblique;
   }
   &__desc {
-    width: 50rem;
-    font-size: 1.8rem;
+    width: 70rem;
+    font-size: 2rem;
     line-height: 2.2rem;
-    font-weight: 300;
+    font-weight: 200;
   }
   &__img {
     width: 100%;
